# CandyBoxGUI

./: .gitignore  CMakeLists.txt  README.md
src/: Config.hpp.in  MainWin.cpp  MainWin.hpp  Settings.cpp  Settings.hpp  main.cpp
src/save/: MainWinSave.cpp
translation/: candyboxgui_fr.ts
